ingress-tls-certificate-using-secret/ingress-path-base-routing/nginx-ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whereami-app-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
   - http:
      paths:
      - path: /whereami
        pathType: Prefix
        backend:
          service:
            name: whereami-app
            port:
              number: 8080
